style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

section {
    display: flex;
    flex-direction: row;
    margin: 10px;
    padding: 10px;
    gap: 20px;

}

.container h2::before {
    content: "";
    margin: 2px;
    padding: 2px;
    border-left: 4px solid red ;
}
.container h2 {
    font-size: xxx-large;
}

.my-info {
    display: grid;
    grid-template-columns: repeat(2 ,auto);
}

.my-info div {
    margin: 10px;
    padding: 10px;
}

section button {
    color: white;
    background-color: red;
    width: 10em;
    height: 3em;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    -ms-border-radius: 3px;
    -o-border-radius: 3px;
    margin: 10px;
    padding: 10px;
}

#profile-card {
    margin: 10px;
    height: 100%;
    position: relative;
    border: 3px solid;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    box-shadow: 0 4px 8px;
}

.image-container {
    top: 55px;
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0 auto 20px;
    left: 45px;
    overflow: hidden;
}

.image-container img{
    height: 299px;
    width: 168px;
}

.info-icon {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.445);
    height: 100%;
    width: 100%;
}

.info-icon i {
    color: white;
    margin: 15px;
    padding-top: 100px;
}
.image-container:hover .info-icon{
    transform: translatey(-300px);
    transition: 1s ease-out;
    -webkit-transform: translatey(-300px);
    -moz-transform: translatey(-300px);
    -ms-transform: translatey(-300px);
    -o-transform: translatey(-300px);
    -webkit-transition: 1s ease-out;
    -moz-transition: 1s ease-out;
    -ms-transition: 1s ease-out;
    -o-transition: 1s ease-out;
}

.my-info span {
    font-weight: bold;
}

.skills i {
    color: red;
}

.skills {
    background-color: aliceblue;
    margin: 10px;
    padding: 10px;
}

.ser-con {
    margin: 10px;
    padding: 10px;
    display: grid;
    grid-template-columns: repeat(4 , auto);
    align-items: center;
    justify-content: center;
    text-align: center;
}

.lines {
    display: grid;
    grid-template-columns: repeat(1 , 110px);
    justify-content: center;

}

.lines::before {
    content: "";
    margin: 2px;
    padding: 2px;
    border-bottom: 3px solid;
}

.lines1 {
    display: grid;
    grid-template-columns: repeat(1 , 130px);
    justify-content: center;
}

.lines1::before {
    content: "";
    margin: 2px;
    padding: 2px;
    border-bottom: 3px solid red;
}


.lines2 {
    display: grid;
    grid-template-columns: repeat(1 , 115px);
    justify-content: center;
}

.lines2::before {
    content: "";
    margin: 2px;
    padding: 2px;
    border-bottom: 3px solid;
}


.sty img:hover {
    cursor: pointer;
    background-color: black;
}

.members {
    display: grid;
    grid-template-columns: repeat(3 ,auto);
    justify-content:space-around ;
    text-align: center;
    align-items: center;
    margin: 10px;
    padding: 10px;
    background-color: antiquewhite;
}

.members i {
    color: red;
}

.our-reach {
    font-weight: bolder;
    margin: 10px;
    padding: 10px;
}


strong {
    font-size: x-large;
}

#sec-cont {
    margin: 1rem;
    padding: 2rem;
}

.ser-con{
    display: flex;
    justify-content: space-between;
}

